--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* google oswald fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 /* asterisk to override default margins and paddings */
 * {
    margin: 0;
@@ -9,10 +11,14 @@ body {
     display: flex;
     flex-direction: column;
     color: #3a3a3a;
+    font-family: 'lato', sans-serif;
 }
 /* header */
 header {
     background-color: aqua;
+}
+h1 {
+    font-family: 'oswald', sans-serif;
 }
 /* main */
 main {
