--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,16 @@ header {
 }
 h1 {
     font-family: 'oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+#menu {
+    list-style-type: none;
+}
+header a {
+    text-decoration: none;
+    color: inherit;
 }
 /* main */
 main {
