--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,14 @@ h1 {
 }
 #menu {
     list-style-type: none;
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+#menu li {
+    margin-bottom: 1em;
+}
+.active {
+    border-bottom: 1px solid #a55555;
 }
 header a {
     text-decoration: none;
