--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,12 @@ header {
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
 }
+
 h1 {
     font-family: 'oswald', sans-serif;
     text-transform: uppercase;
@@ -42,6 +47,7 @@ h1 {
 header a {
     text-decoration: none;
     color: inherit;
+  
 }
 nav {
     position: absolute;
@@ -50,6 +56,18 @@ nav {
     left: 0;
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 100%;
+}
+/* nav-toggle */
+#nav-toggle:checked ~ nav {
+    display: block;
+   
+}
+.nav-toggle-label {
+    font-size: 2rem;
+}
+#nav-toggle {
     display: none;
 }
 /* main */
