add social media links to footer and display them horizontally

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,18 @@ main {
 /* footer */
 footer {
     background-color: blueviolet;
+    
+
+}
+footer ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+footer a {
+    width: 100%;
+    height: auto;
 }
 
 
