add background image to section in home page main element with adjusted height and width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h1 {
     margin-bottom: 1em;
 }
 .active {
-    border-bottom: 1px solid #a55555;
+    border-bottom: 3px solid #111111;
 }
 header a {
     text-decoration: none;
@@ -72,11 +72,15 @@ nav {
 }
 /* main */
 main {
-    background-color: beige;
     /* make main element grow as it contains main content */
     flex: 1 0 auto;
-    margin-top: 47px;
-    
+    margin-top: 40px;
+}
+#hero {
+    width: 100%;
+    height: 600px;
+    background-color: blue;
+    background: url('../images/hero-image.webp') no-repeat center center/cover;
 }
 /* footer */
 footer {
