--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ main {
 }
 /* section id in main */
 #hero {
-    width: 100%;
+    
     height: 600px;
     background-color: blue;
     background: url('../images/hero-image.webp') no-repeat center center/cover;
@@ -114,6 +114,13 @@ footer ul {
 footer i {
     font-size: 160%;
     padding: 5px;
+}
+#why-join-us {
+
+}
+.join {
+    border: 2px solid blue;
+    width: 100%;
 }
 
 
