--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,19 @@ main {
     font-size: 200%;
    
 }
-
+#section-image {
+    display: flex;
+    justify-content: center;
+}
+#join-image {
+    background: url('../images/join-image.webp') no-repeat center center/cover;
+    height: 90vw;
+    width: 90vw;
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+   
+}
 
 /* footer */
 footer {
@@ -174,6 +186,7 @@ footer i {
         min-height: 130px;
     }
    
+    
         
 }
 @media screen and (min-width: 992px) {
