style content layout for different breakpoints, starting with mobile first, then 786px and 992px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ main {
     font-size: 350%;
     padding-left: 40px;
     font-family: 'Oswald', sans-serif;
+    text-align: center;
     
 }
 .join  {
@@ -117,8 +118,10 @@ main {
 }
 .join h3{
     font-size: 220%;
+    
 
 }
+
 .join i {
     margin-left: 10px;
     font-size: 200%;
@@ -197,6 +200,7 @@ footer i {
    }
    .join p {
     text-align: unset;
+    font-size: 80%;
 
    }
    .join p br {
@@ -214,6 +218,20 @@ footer i {
         right: 50px;
         
     }
+    #why-join {
+        display: flex;;
+    }
+    #part-one {
+        order: 0;
+    }
+    #section-image {
+        order: 1
+    }
+   #part-two {
+       order: 2;
+   }
+
+
   
    
 }
